--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 REDIS_HOST=localhost
 REDIS_PORT=6379
 SQLALCHEMY_DATABASE_URL=postgresql://swortal:aaaa@localhost/llmapps
+APP_MANAGER_EMAIL=user@gmail.com
+APP_MANAGER_PASSWORD=password
+DOMAIN=localhost
+UNLIMITED_USER_EMAILS=user1@gmail.com,user2@gmail.com
+# Number of requests per day
+CALLS_PER_WEEK=500
