add logging mechanism

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ DOMAIN=localhost
 UNLIMITED_USER_EMAILS=user1@gmail.com,user2@gmail.com
 # Number of requests per day
 CALLS_PER_WEEK=500
+LOG_DIR=/tmp/logs
+LOG_LEVEL=INFO
