--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
     "tailwindcss": "3.4.12",
-    "typescript": "5.6.2"
+    "typescript": "5.6.2",
+    "winston": "^3.17.0"
   }
 }
