--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "fastapi-dev": "pip3 install -r requirements.txt && python3 -m uvicorn api.index:app --reload",
-    "next-dev": "next dev",
+    "fastapi-dev": "pip3 install -r requirements.txt && cd backend && python3 -m uvicorn index:app --reload",
+    "next-dev": "NODE_OPTIONS='--inspect' next dev",
     "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
     "build": "next build",
     "start": "next start",
@@ -18,13 +18,12 @@
     "concurrently": "^9.0.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
-    "next": "^14.2.13",
+    "next": "^14.2.26",
     "postcss": "^8.4.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
     "tailwindcss": "3.4.12",
-    "typescript": "5.6.2",
-    "winston": "^3.17.0"
+    "typescript": "5.6.2"
   }
 }
