--- a/.env
+++ b/.env
@@ -5,7 +5,9 @@ APP_MANAGER_GMAIL_CREDS_PATH=creds.json
 APP_MANAGER_GMAIL=test@gmail.com
 DOMAIN=localhost
 UNLIMITED_USER_EMAILS=user1@gmail.com,user2@gmail.com
-# Number of requests per day
+# Number of requests per week
 CALLS_PER_WEEK=500
 LOG_DIR=/tmp/logs
 LOG_LEVEL=INFO
+GEMINIUS_API_KEY=your_gemini_api_key
+GEMINI_MODEL=gemini-2.5-pro-exp-03-25
