--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ LOG_DIR=/tmp/logs
 LOG_LEVEL=INFO
 GEMINI_API_KEY=your_gemini_api_key
 GEMINI_MODEL=gemini-2.5-pro-exp-03-25
+INVITATION_CODE_USER_TIER_MAP={"unlimited": "unlimited", "full_experimentation": "full_experimentation"}
