--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "tailwindcss": "3.4.12",
     "typescript": "5.6.2"
   }
