--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ LOG_LEVEL=INFO
 GEMINI_API_KEY=your_gemini_api_key
 GEMINI_MODEL=gemini-2.5-pro-exp-03-25
 INVITATION_CODE_USER_TIER_MAP={"unlimited": "unlimited", "full_experimentation": "full_experimentation"}
+APP_MANAGER_GMAIL_APP_PASSWORD=your_app_password
