--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "fastapi-dev": "pip3 install -r requirements.txt && cd backend && python3 -m uvicorn index:app --reload",
     "next-dev": "NODE_OPTIONS='--inspect' next dev",
-    "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
+    "dev": "concurrently \"node server.js\" \"npm run fastapi-dev\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -18,6 +18,8 @@
     "concurrently": "^9.0.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "express": "^5.1.0",
+    "http-proxy-middleware": "^3.0.5",
     "next": "^14.2.26",
     "postcss": "^8.4.47",
     "react": "18.3.1",
